--- a/WServices/Web.config
+++ b/WServices/Web.config
@@ -23,6 +23,9 @@
     <add key="OutletLogoPath" value="~\Images\CompanyLogo"/>
     <add key="OutletLogoUrlPath" value="http://localhost:60516/Images/CompanyLogo/"/>
   
+    
+      <add key="OutletLogoPath1" value="~\Images\CompanyLogo"/>
+    <add key="OutletLogoUrlPath1" value="http://localhost:60516/Images/CompanyLogo/"/>
   </appSettings>
 
   <system.web>
