Web Config Re Upload

--- a/WServices/Web.config
+++ b/WServices/Web.config
@@ -26,6 +26,11 @@
     
       <add key="OutletLogoPath1" value="~\Images\CompanyLogo"/>
     <add key="OutletLogoUrlPath1" value="http://localhost:60516/Images/CompanyLogo/"/>
+
+
+ <add key="OutletLogoPath2" value="~\Images\CompanyLogo"/>
+    <add key="OutletLogoUrlPath2" value="http://localhost:60516/Images/CompanyLogo/"/>
+
   </appSettings>
 
   <system.web>
