New Branch added new path in Config

--- a/WServices/Web.config
+++ b/WServices/Web.config
@@ -31,6 +31,10 @@
  <add key="OutletLogoPath2" value="~\Images\CompanyLogo"/>
     <add key="OutletLogoUrlPath2" value="http://localhost:60516/Images/CompanyLogo/"/>
 
+
+ <add key="OutletLogoPath3" value="~\Images\CompanyLogo"/>
+    <add key="OutletLogoUrlPath3" value="http://localhost:60516/Images/CompanyLogo/"/>
+
   </appSettings>
 
   <system.web>
